tests/error/struct_errors/mutate_classical.err
Error: Immutable (at $FILE:14:4)
   | 
12 | def foo(s: MyStruct) -> tuple[MyStruct, bool]:
13 |     t = s
14 |     t.x += 1
   |     ^^^ Struct `MyStruct` is immutable

Guppy compilation failed due to 1 previous error
